# smartwatch_simulator

./: CMakeLists.txt  README.md  sdkconfig.old
components/cli/: CMakeLists.txt  cli.c
components/cli/include/: cli.h
components/common/: CMakeLists.txt
components/common/include/: event_bits.h
components/datetime/: CMakeLists.txt  datetime.c
components/datetime/include/: datetime.h
components/heart_rate/: CMakeLists.txt  heart_rate.c
components/heart_rate/include/: heart_rate.h
components/memory/: CMakeLists.txt  heap_tracker.c
components/memory/include/: heap_tracker.h  memory_pool.h
components/step_counter/: CMakeLists.txt  step_counter.c
components/step_counter/include/: step_counter.h
main/: CMakeLists.txt  main.c
